--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
     <section id="about">
         <div id="left">
             <div class="text">
+                <h1>About Me</h1>
                 <h2>Khairulamirin</h2>
                 <p>A guy who was born in March 18, 2003 with a bunch of ambition from dreamed of being a doctor, astronaut, firefighter, teacher, and chemical engineer. Now, I'm pursuing software engineering. 
                As a true cat lover and One Punch Man fan, I bring curiosity and dedication to everything I do. Im also love to gain knowledege in the world of technology such as Artificial Intelligence, and discovering new worlds and cultures. 
@@ -54,6 +55,27 @@
             </div>
         </div>
         <img src="assets/khairulamirin.jpeg" alt="khairulamirin">  
+    </section>
+    <section id="projects">
+        <h1>My Projects</h1>
+        <div id="container">
+            <div class="left-one">
+                <h3>Pacman</h3>
+                <p>Explore the classic Pac-Man game! </p>
+            </div>
+            <div class="left-two">
+                <h3>Task App</h3>
+                <p>Designed to help you stay organized and productive. </p>
+            </div>
+            <div class="right-one">
+                <h3>Quote Qenerator</h3>
+                <p>Each click brings a new piece of wisdom or motivation.</p>
+            </div>
+            <div class="right-two">
+                <h3>Random Password Generator</h3>
+                <p>Generate strong and unique passwords instantly.</p>
+            </div>
+        </div>
     </section>
     <footer id="contact">
         <h2>Connect with Me</h2>
