--- a/index.html
+++ b/index.html
@@ -36,67 +36,102 @@
         </ul>
     </div>
     <section id="home">
-        <img src="" alt="">
+        <img src="assets/khairulamirin2.jpeg" alt="khairulamirin">
+        <h3>Khairulamirin Bin Mohamed Lamin</h3>
         <h1>Welcome to my <br><span>website</span></h1>
         <p>Diploma Chemical Engineering Graduate, now diving into the exciting world 
            of Software Engineering!</p>
     </section>
     <section id="about">
-        <div id="left">
-            <div class="text">
-                <h1>About Me</h1>
-                <h2>Khairulamirin</h2>
-                <p>A guy who was born in March 18, 2003 with a bunch of ambition from dreamed of being a doctor, astronaut, firefighter, teacher, and chemical engineer. Now, I'm pursuing software engineering. 
+        <h1>About Me</h1>
+        <div id="box">
+            <div class="text" style="text-align: left;">
+                <p style="line-height: 35px;">A guy who was born in March 18, 2003 with a bunch of ambition from dreamed of being a doctor, astronaut, firefighter, teacher, and chemical engineer. Now, I'm pursuing software engineering. 
                As a true cat lover and One Punch Man fan, I bring curiosity and dedication to everything I do. Im also love to gain knowledege in the world of technology such as Artificial Intelligence, and discovering new worlds and cultures. 
                Dive in to learn more about my journey!</p>
-            </div>
-            <div class="fun-facts">
+               <div class="fun-facts">
 
+               </div>
+            </div>
+            <div class="img">
+                <img src="assets/khairulamirin.jpeg" alt="khairulamirin">  
             </div>
         </div>
-        <img src="assets/khairulamirin.jpeg" alt="khairulamirin">  
     </section>
     <section id="projects">
         <h1>My Projects</h1>
         <div id="container">
-            <div class="left-one">
-                <h3>Pacman</h3>
-                <p>Explore the classic Pac-Man game! </p>
+            <div id="left">
+                <div class="left-one" style="height: 600px;">
+                    <h3>Pacman</h3>
+                    <p>Explore the classic Pac-Man game! </p>
+                </div>
+                <div class="left-two" style="height: 530px;">
+                    <h3>Task App</h3>
+                    <p>Designed to help you stay organized and productive. </p>
+                </div>
             </div>
-            <div class="left-two">
-                <h3>Task App</h3>
-                <p>Designed to help you stay organized and productive. </p>
+            <div id="right">
+                <div class="right-one" style="height: 530px;">
+                    <h3>Quote Qenerator</h3>
+                    <p>Each click brings a new piece of wisdom or motivation.</p>
+                </div>
+                <div class="right-two" style="height: 600px;">
+                    <h3>Random Password Generator</h3>
+                    <p>Generate strong and unique passwords instantly.</p>
+                </div>
             </div>
-            <div class="right-one">
-                <h3>Quote Qenerator</h3>
-                <p>Each click brings a new piece of wisdom or motivation.</p>
+        </div>
+    </section>
+    <section id="skills">
+        <h1>My Skills</h1>
+        <div id="logoSkills">
+            <img src="assets/html-logo.webp" alt="html">
+            <img src="assets/css-logo.png" alt="css">
+            <img src="assets/JavaScript-logo.png" alt="JavaScript">
+        </div>
+        <div id="skillContainer">
+            <div class="skill">
+                <div class="skill-name">HTML<span>80%</span></div>
+                <div class="skill-bar">
+                    <div class="skill-level" style="width: 80%;"></div>
+                </div>
             </div>
-            <div class="right-two">
-                <h3>Random Password Generator</h3>
-                <p>Generate strong and unique passwords instantly.</p>
+            <div class="skill">
+                <div class="skill-name">CSS<span>80%</span></div>
+                <div class="skill-bar">
+                    <div class="skill-level" style="width: 80%;"></div>
+                </div>
+            </div>
+            <div class="skill">
+                <div class="skill-name">JavaScript <span>30%</span></div>
+                <div class="skill-bar">
+                    <div class="skill-level" style="width: 30%;"></div>
+                </div>
             </div>
         </div>
     </section>
     <footer id="contact">
-        <h2>Connect with Me</h2>
+        <h1>Connect with Me</h1>
         <div id="social-media">
             <div class="instagram">
                 <img src="assets/instagram.png" alt="instagram">
-                <h3>Instagram</h3>
+                <h3>Instagram <p>@khairulamirn</p></h3>
             </div>
             <div class="linkedin">
                 <img src="assets/linkedin.png" alt="linkedin">
-                <h3>LinkedIn</h3>
+                <h3>LinkedIn <p>Khairulamirin Lamin</p></h3>
             </div>
             <div class="github">
                 <img src="assets/github.png" alt="github">
-                <h3>GitHub</h3>
+                <h3>GitHub <p>@khairulamirn</p></h3>
             </div>
             <div class="gmail">
                 <img src="assets/gmail.png" alt="gmail">
-                <h3>Gmail</h3>
+                <h3>Gmail <p>khairulamirin.lamin@gmail.com</p></h3>
             </div>
         </div>
+        <p>© Khairulamirin 2024. All rights reserved.</p>
     </footer>
 </body>
 </html>
