--- a/index.html
+++ b/index.html
@@ -36,21 +36,42 @@
         </ul>
     </div>
     <section id="home">
-        <img src="assets/khairulamirin2.jpeg" alt="khairulamirin">
-        <h3>Khairulamirin Bin Mohamed Lamin</h3>
-        <h1>Welcome to my <br><span>website</span></h1>
-        <p>Diploma Chemical Engineering Graduate, now diving into the exciting world 
-           of Software Engineering!</p>
+        <div id="homeText">
+            <h3>Khairulamirin Bin Mohamed Lamin</h3>
+            <h1>Welcome to my <br><span style="color: #82d0e6;">website</span></h1>
+            <p style="margin-top: 30px;">Diploma Chemical Engineering Graduate, now diving into the exciting world 
+               of Software Engineering!</p>
+        </div>
+        <img src="assets/khairulamirin2.png" alt="khairulamirin">
     </section>
     <section id="about">
-        <h1>About Me</h1>
+        <h1>About <span style="color: #82d0e6;">Me</span></h1>
         <div id="box">
-            <div class="text" style="text-align: left;">
+            <div class="text" style="text-align: justify;">
                 <p style="line-height: 35px;">A guy who was born in March 18, 2003 with a bunch of ambition from dreamed of being a doctor, astronaut, firefighter, teacher, and chemical engineer. Now, I'm pursuing software engineering. 
                As a true cat lover and One Punch Man fan, I bring curiosity and dedication to everything I do. Im also love to gain knowledege in the world of technology such as Artificial Intelligence, and discovering new worlds and cultures. 
                Dive in to learn more about my journey!</p>
-               <div class="fun-facts">
-
+               <div id="insideBox">
+                   <div class="education">
+                        <h2>Education</h2>
+                        <div>
+                            <h3>Universiti Malaysia Pahang</h3>
+                            <p>Diploma in Chemical Engineering <span>Jul 2021 - Dec 2023</span></p>
+                        </div>
+                   </div>
+                   <div class="experience">
+                        <h2>Experience</h2>
+                        <div>
+                            <h3>Malaysian Refining Company SDN BHD</h3>
+                            <p>Internship Trainee <span>Aug 2023 - Dec 2023</span></p>
+                            <h3 style="margin-top: 15px;">Skills</h3>
+                            <ul style="margin-top: 20px;">
+                                <li>ASTM standards</li>
+                                <li>Laboratory Information Management System (LIMS)</li>
+                                <li>Waste Management</li>
+                            </ul>
+                        </div>
+                   </div>
                </div>
             </div>
             <div class="img">
@@ -59,32 +80,36 @@
         </div>
     </section>
     <section id="projects">
-        <h1>My Projects</h1>
+        <h1>My <span style="color: #82d0e6;">Projects</span></h1>
         <div id="container">
             <div id="left">
                 <div class="left-one" style="height: 600px;">
                     <h3>Pacman</h3>
                     <p>Explore the classic Pac-Man game! </p>
+                    <button id="button1">Link code</button>
                 </div>
                 <div class="left-two" style="height: 530px;">
                     <h3>Task App</h3>
                     <p>Designed to help you stay organized and productive. </p>
+                    <button id="button2">Link code</button>
                 </div>
             </div>
             <div id="right">
                 <div class="right-one" style="height: 530px;">
-                    <h3>Quote Qenerator</h3>
+                    <h3>Quote Generator</h3>
                     <p>Each click brings a new piece of wisdom or motivation.</p>
+                    <button id="button3">Link code</button>
                 </div>
                 <div class="right-two" style="height: 600px;">
                     <h3>Random Password Generator</h3>
                     <p>Generate strong and unique passwords instantly.</p>
+                    <button id="button4">Link code</button>
                 </div>
             </div>
         </div>
     </section>
     <section id="skills">
-        <h1>My Skills</h1>
+        <h1>My <span style="color: #82d0e6;">Skills</span></h1>
         <div id="logoSkills">
             <img src="assets/html-logo.webp" alt="html">
             <img src="assets/css-logo.png" alt="css">
@@ -112,7 +137,7 @@
         </div>
     </section>
     <footer id="contact">
-        <h1>Connect with Me</h1>
+        <h1>Thanks For Visiting</h1>
         <div id="social-media">
             <div class="instagram">
                 <img src="assets/instagram.png" alt="instagram">
