--- a/index.html
+++ b/index.html
@@ -14,32 +14,36 @@
 <body>
     <section id="nav-container">
         <nav class="nav-bar">
-            <a href="#home">Home</a>
+            <img style="width: 40px; height: 40px; border-radius: 50%;" src="assets/logo-khairul.jpg" alt="khairulamirin-logo">
+            <a style="margin-left: 90px;" href="#home">Home</a>
             <a href="#about">About</a>
             <a href="#projects">Projects</a>
             <a href="#skills">Skills</a>
             <a href="#contact">Contact</a>
         </nav>
+        <img style="width: 40px; height: 40px; border-radius: 50%; margin-top: 1%;" src="assets/logo-khairul.jpg" alt="khairulamirin-logo">
         <i id="listMenu" class="bi bi-list"></i>
     </section>
-    <div id="sidebar">
-        <div>
-            <h1>Logo</h1>
-            <i id="xIcon" class="bi bi-x"></i>
+    <div id="sidebarBackground">
+        <div id="sidebar">
+            <div>
+                <img style="width: 40px; height: 40px; border-radius: 50%; margin-bottom: 4%;" src="assets/logo-khairul.jpg" alt="khairulamirin-logo">
+                <i id="xIcon" class="bi bi-x"></i>
+            </div>
+            <ul>
+                <li><a href="#home">Home</a></li>
+                <li><a href="#about">About</a></li>
+                <li><a href="#projects">Projects</a></li>
+                <li><a href="#skills">Skills</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
         </div>
-        <ul>
-            <li><a href="#home">Home</a></li>
-            <li><a href="#about">About</a></li>
-            <li><a href="#projects">Projects</a></li>
-            <li><a href="#skills">Skills</a></li>
-            <li><a href="#contact">Contact</a></li>
-        </ul>
     </div>
     <section id="home">
         <div id="homeText">
             <h3>Khairulamirin Bin Mohamed Lamin</h3>
             <h1>Welcome to my <br><span style="color: #82d0e6;">website</span></h1>
-            <p style="margin-top: 30px;">Diploma Chemical Engineering Graduate, now diving into the exciting world 
+            <p>Diploma Chemical Engineering Graduate, now diving into the exciting world 
                of Software Engineering!</p>
         </div>
         <img src="assets/khairulamirin2.png" alt="khairulamirin">
@@ -48,9 +52,8 @@
         <h1>About <span style="color: #82d0e6;">Me</span></h1>
         <div id="box">
             <div class="text" style="text-align: justify;">
-                <p style="line-height: 35px;">A guy who was born in March 18, 2003 with a bunch of ambition from dreamed of being a doctor, astronaut, firefighter, teacher, and chemical engineer. Now, I'm pursuing software engineering. 
-               As a true cat lover and One Punch Man fan, I bring curiosity and dedication to everything I do. Im also love to gain knowledege in the world of technology such as Artificial Intelligence, and discovering new worlds and cultures. 
-               Dive in to learn more about my journey!</p>
+                <p>A guy who was born in March 18, 2003 with a bunch of ambition from dreamed of being a doctor, astronaut, firefighter, teacher, and chemical engineer. Now, I'm pursuing software engineering. 
+               As a true cat lover and One Punch Man fan, I bring curiosity and dedication to everything I do. Im also love to exercise such as jogging and do some calisthenics.</p>
                <div id="insideBox">
                    <div class="education">
                         <h2>Education</h2>
@@ -74,7 +77,7 @@
                    </div>
                </div>
             </div>
-            <div class="img">
+            <div class="img" style="margin: 0 auto;">
                 <img src="assets/khairulamirin.jpeg" alt="khairulamirin">  
             </div>
         </div>
@@ -83,7 +86,7 @@
         <h1>My <span style="color: #82d0e6;">Projects</span></h1>
         <div id="container">
             <div id="left">
-                <div class="left-one" style="height: 600px;">
+                <div class="left-one">
                     <h3>Pacman</h3>
                     <p>Explore the classic Pac-Man game! </p>
                     <button id="button1">Link code</button>
@@ -100,7 +103,7 @@
                     <p>Each click brings a new piece of wisdom or motivation.</p>
                     <button id="button3">Link code</button>
                 </div>
-                <div class="right-two" style="height: 600px;">
+                <div class="right-two">
                     <h3>Random Password Generator</h3>
                     <p>Generate strong and unique passwords instantly.</p>
                     <button id="button4">Link code</button>
@@ -137,7 +140,8 @@
         </div>
     </section>
     <footer id="contact">
-        <h1>Thanks For Visiting</h1>
+        <img src="assets/logo-khairul.jpg" alt="khairulamirin-logo">
+        <h1>Connect with me</h1> 
         <div id="social-media">
             <div class="instagram">
                 <img src="assets/instagram.png" alt="instagram">
