--- a/index.html
+++ b/index.html
@@ -12,10 +12,11 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <section id="nav-container">
+    <section id="navContainer">
         <nav class="nav-bar">
+            <i id="modeToggle" class="bi bi-moon-stars-fill"></i>
             <img style="width: 40px; height: 40px; border-radius: 50%;" src="assets/logo-khairul.jpg" alt="khairulamirin-logo">
-            <a style="margin-left: 90px;" href="#home">Home</a>
+            <a style="margin-left: 5%;" href="#hero">Home</a>
             <a href="#about">About</a>
             <a href="#projects">Projects</a>
             <a href="#skills">Skills</a>
@@ -31,7 +32,7 @@
                 <i id="xIcon" class="bi bi-x"></i>
             </div>
             <ul>
-                <li><a href="#home">Home</a></li>
+                <li><a href="#hero">Home</a></li>
                 <li><a href="#about">About</a></li>
                 <li><a href="#projects">Projects</a></li>
                 <li><a href="#skills">Skills</a></li>
@@ -39,8 +40,8 @@
             </ul>
         </div>
     </div>
-    <section id="home">
-        <div id="homeText">
+    <section id="hero">
+        <div id="heroText">
             <h3>Khairulamirin Bin Mohamed Lamin</h3>
             <h1>Welcome to my <br><span style="color: #82d0e6;">website</span></h1>
             <p>Diploma Chemical Engineering Graduate, now diving into the exciting world 
@@ -50,6 +51,7 @@
     </section>
     <section id="about">
         <h1>About <span style="color: #82d0e6;">Me</span></h1>
+
         <div id="box">
             <div class="text" style="text-align: justify;">
                 <p>A guy who was born in March 18, 2003 with a bunch of ambition from dreamed of being a doctor, astronaut, firefighter, teacher, and chemical engineer. Now, I'm pursuing software engineering. 
@@ -141,7 +143,7 @@
     </section>
     <footer id="contact">
         <img src="assets/logo-khairul.jpg" alt="khairulamirin-logo">
-        <h1>Connect with me</h1> 
+        <h1><span style="color: #82d0e6;">Connect</span> with me</h1> 
         <div id="social-media">
             <div class="instagram">
                 <img src="assets/instagram.png" alt="instagram">
