--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body id="body">
-    <section id="navContainer">
+    <header id="navContainer">
         <nav class="nav-bar">
             <i id="modeToggle" class="bi bi-moon-stars-fill"></i>
             <img style="width: 40px; height: 40px; border-radius: 50%;" src="assets/logo-khairul.jpg" alt="khairulamirin-logo">
@@ -24,8 +24,8 @@
         </nav>
         <img style="width: 40px; height: 40px; border-radius: 50%; margin-top: 1%;" src="assets/logo-khairul.jpg" alt="khairulamirin-logo">
         <i id="listMenu" class="bi bi-list"></i>
-    </section>
-    <div id="sidebarBackground">
+    </header>
+    <header id="sidebarBackground">
         <div id="sidebar">
             <div>
                 <img style="width: 40px; height: 40px; border-radius: 50%; margin-bottom: 4%;" src="assets/logo-khairul.jpg" alt="khairulamirin-logo">
@@ -39,7 +39,7 @@
                 <li><a href="#contact">Contact</a></li>
             </ul>
         </div>
-    </div>
+    </header>
     <section id="hero">
         <div id="heroText">
             <h3>Khairulamirin Bin Mohamed Lamin</h3>
@@ -51,7 +51,6 @@
     </section>
     <section id="about">
         <h1>About <span style="color: #82d0e6;">Me</span></h1>
-
         <div id="box">
             <div class="text" style="text-align: justify;">
                 <p>A guy who was born in March 18, 2003 with a bunch of ambition from dreamed of being a doctor, astronaut, firefighter, teacher, and chemical engineer. Now, I'm pursuing software engineering. 
@@ -169,7 +168,7 @@
             </div>
             <div class="gmail">
                 <img src="assets/gmail.png" alt="gmail">
-                <h3>Gmail <p>khairulamirin.lamin@gmail.com</p></h3>
+                <h3>Gmail <p>khairulamirn.lamin@gmail.com</p></h3>
             </div>
         </div>
         <img src="assets/logo-khairul.jpg" alt="khairulamirin-logo">
