--- a/index.html
+++ b/index.html
@@ -5,16 +5,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Khairulamirin - Personal Portfolio</title>
     <script src="script.js" defer></script>
+    <!-- icon -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    <!-- googlefont -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Mulish:ital,wght@0,200..1000;1,200..1000&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 <body id="body">
+    <!-- navbar for desktop responsive-->
     <header id="navContainer">
         <nav class="nav-bar">
+            <!-- nightmode -->
             <i id="modeToggle" class="bi bi-moon-stars-fill"></i>
+            <!-- logo and nav menu -->
             <img style="width: 40px; height: 40px; border-radius: 50%;" src="assets/logo-khairul.jpg" alt="khairulamirin-logo">
             <a style="margin-left: 5%;" href="#hero">Home</a>
             <a href="#about">About</a>
@@ -22,9 +27,11 @@
             <a href="#skills">Skills</a>
             <a href="#contact">Contact</a>
         </nav>
+        <!-- header for mobile responsive -->
         <img style="width: 40px; height: 40px; border-radius: 50%; margin-top: 1%;" src="assets/logo-khairul.jpg" alt="khairulamirin-logo">
         <i id="listMenu" class="bi bi-list"></i>
     </header>
+    <!-- sidebar for mobile responsive -->
     <header id="sidebarBackground">
         <div id="sidebar">
             <div>
@@ -40,21 +47,26 @@
             </ul>
         </div>
     </header>
+    <!-- HOME SECTION -->
     <section id="hero">
+        <!-- left side -->
         <div id="heroText">
             <h3>Khairulamirin Bin Mohamed Lamin</h3>
             <h1>Welcome to my <br><span style="color: #82d0e6;">website</span></h1>
             <p>Diploma Chemical Engineering Graduate, now diving into the exciting world 
                of Software Engineering!</p>
         </div>
+        <!-- right side -->
         <img src="assets/khairulamirin2.png" alt="khairulamirin">
     </section>
+    <!-- ABOUT SECTION -->
     <section id="about">
         <h1>About <span style="color: #82d0e6;">Me</span></h1>
         <div id="box">
             <div class="text" style="text-align: justify;">
                 <p>A guy who was born in March 18, 2003 with a bunch of ambition from dreamed of being a doctor, astronaut, firefighter, teacher, and chemical engineer. Now, I'm pursuing software engineering. 
                As a true cat lover and One Punch Man fan, I bring curiosity and dedication to everything I do. Im also love to exercise such as jogging and do some calisthenics.</p>
+               <!-- box for education and experience -->
                <div id="insideBox">
                    <div class="education">
                         <h2>Education</h2>
@@ -78,14 +90,17 @@
                    </div>
                </div>
             </div>
-            <div class="img" style="margin: 0 auto;">
+            <!-- right side picture -->
+            <div class="img">
                 <img src="assets/khairulamirin.jpeg" alt="khairulamirin">  
             </div>
         </div>
     </section>
+    <!-- PROJECTS SECTION  -->
     <section id="projects">
         <h1>My <span style="color: #82d0e6;">Projects</span></h1>
         <div id="container">
+            <!-- left side -->
             <div id="left">
                 <div class="left-one">
                     <h3>Pacman</h3>
@@ -98,6 +113,7 @@
                     <button id="button2">Link code</button>
                 </div>
             </div>
+            <!-- right side -->
             <div id="right">
                 <div class="right-one" style="height: 530px;">
                     <h3>Quote Generator</h3>
@@ -112,26 +128,32 @@
             </div>
         </div>
     </section>
+    <!-- SKILLS SECTION -->
     <section id="skills">
         <h1>My <span style="color: #82d0e6;">Skills</span></h1>
+        <!-- logo -->
         <div id="logoSkills">
             <img src="assets/html-logo.webp" alt="html">
             <img src="assets/css-logo.png" alt="css">
             <img src="assets/JavaScript-logo.png" alt="JavaScript">
         </div>
+        <!-- skill percantage -->
         <div id="skillContainer">
+            <!-- html -->
             <div class="skill">
                 <div class="skill-name">HTML<span>80%</span></div>
                 <div class="skill-bar">
                     <div class="skill-level" style="width: 80%;"></div>
                 </div>
             </div>
+            <!-- css -->
             <div class="skill">
                 <div class="skill-name">CSS<span>80%</span></div>
                 <div class="skill-bar">
                     <div class="skill-level" style="width: 80%;"></div>
                 </div>
             </div>
+            <!-- javascript -->
             <div class="skill">
                 <div class="skill-name">JavaScript <span>30%</span></div>
                 <div class="skill-bar">
@@ -140,8 +162,10 @@
             </div>
         </div>
     </section>
+    <!-- CONTACT SECTION -->
     <section id="contact">
         <h1><span style="color: #82d0e6;">Connect</span> with me</h1>
+        <!-- send email -->
         <div id="emailContainer">
             <form action="https://api.web3forms.com/submit" method="POST" id="emailBox">
                 <input type="hidden" name="access_key" value="4a61d205-11d1-428f-a94e-aae9ec89ce83">
@@ -152,6 +176,7 @@
             </form>
         </div>
     </section>
+    <!-- FOOTER SECTION -->
     <footer>
         <div id="social-media">
             <div class="instagram">
@@ -172,6 +197,7 @@
             </div>
         </div>
         <img src="assets/logo-khairul.jpg" alt="khairulamirin-logo">
+        <!-- copyright -->
         <p>© Khairulamirin 2024. All rights reserved.</p>
     </footer>
 </body>
