--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
     </section>
     <!-- FOOTER SECTION -->
     <footer>
-        <div id="social-media">
+        <div id="socialMedia">
             <div class="instagram">
                 <img src="assets/instagram.png" alt="instagram">
                 <h3>Instagram <p>@khairulamirn</p></h3>
