--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body id="body">
-    <!-- navbar for desktop responsive-->
+    <!-- header for desktop responsive-->
     <header id="navContainer">
         <nav class="nav-bar">
             <!-- nightmode -->
@@ -177,7 +177,7 @@
         </div>
     </section>
     <!-- FOOTER SECTION -->
-    <footer>
+    <footer id="footer">
         <div id="socialMedia">
             <div class="instagram">
                 <img src="assets/instagram.png" alt="instagram">
