--- a/index.html
+++ b/index.html
@@ -14,6 +14,12 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body id="body">
+    <!-- button for mobile back to home when scroll to bottom -->
+     <div id="scroll">
+        <button id="btnToTop" onclick="topFunction()">
+            <i style="font-size: 21px;" class="bi bi-arrow-up-short"></i>
+        </button>
+     </div>
     <!-- header for desktop responsive-->
     <header id="navContainer">
         <nav class="nav-bar">
@@ -51,6 +57,7 @@
     <section id="hero">
         <!-- left side -->
         <div id="heroText">
+            <h1>Hi, i'm</h1>
             <h3>Khairulamirin Bin Mohamed Lamin</h3>
             <h1>Welcome to my <br><span style="color: #82d0e6;">website</span></h1>
             <p>Diploma Chemical Engineering Graduate, now diving into the exciting world 
